--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/IconLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 
     <meta
       name="description"
@@ -29,14 +28,14 @@
 
   <body>
     <div id="root"></div>
-      <form name="create_contact_track">
+     <!-- <form name="create_contact_track">
 
               <input type='email' name = "first_name" id = "emails" >
 
             <input type="button" value='Go' onclick = "createContact()">
         </form>	
-        <script type="text/javascript" src="https://remigo.agilecrm.com/stats/min/agile-min.js"></script>
-        <script type="text/javascript" > _agile.set_account('8gffp3a7mn5qssga979pshclcs', 'remigo');
+        <script src="https://remigo.agilecrm.com/stats/min/agile-min.js"></script>
+        <script > _agile.set_account('8gffp3a7mn5qssga979pshclcs', 'remigo');
             _agile.track_page_view();
             _agile_execute_web_rules();
         </script>
@@ -74,6 +73,6 @@
         // Function end
             }
 
-        </script>
+        </script>-->
   </body>
 </html>
