--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/IconLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name=“viewport” content=“width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no”/>
     <meta name="theme-color" content="#000000" />
 
     <meta
@@ -28,51 +29,7 @@
 
   <body>
     <div id="root"></div>
-     <!-- <form name="create_contact_track">
 
-              <input type='email' name = "first_name" id = "emails" >
-
-            <input type="button" value='Go' onclick = "createContact()">
-        </form>	
-        <script src="https://remigo.agilecrm.com/stats/min/agile-min.js"></script>
-        <script > _agile.set_account('8gffp3a7mn5qssga979pshclcs', 'remigo');
-            _agile.track_page_view();
-            _agile_execute_web_rules();
-        </script>
-
-        <script>
-
-            function createContact() {
-                alert('hello');
-
-                var email_received = document.getElementById('emails').value;
-
-                var contact = {};
-                contact.email = email_received;
-
-                // Custom fields can be added to contact object as
-                contact.status = "incomplete";
-                contact.custom_id = "EN001C";
-
-                _agile.create_contact(contact, {
-                    success: function (data) {
-
-                        // Set Email at success of contact creation. But you can set it at failure too.
-                        _agile.set_email(email_received);
-                        
-                        console.log("success");
-                        console.log("Response = "+data);
-                    },
-                    error: function (data) {
-                        console.log("error");
-                        console.log("Error Cause = "+data);
-                    }
-                });
-
-
-        // Function end
-            }
-
-        </script>-->
+     
   </body>
 </html>
