--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name=“viewport” content=“width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no”/>
     <meta name="theme-color" content="#000000" />
+<!-- Primary Meta Tags -->
+<title>Remigo</title>
+<meta name="title" content="Remigo">
+<meta name="description" content="Reimaging the way Agents, Buyers, and Sellers to communicate about and share Real-Estate">
 
-    <meta
-      name="description"
-      content="Reimaging the way Agents, Buyers, and Sellers to communicate about and share Real-Estate"
-    />
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://remigo-landing-page.herokuapp.com/">
+<meta property="og:title" content="Remigo">
+<meta property="og:description" content="Reimaging the way Agents, Buyers, and Sellers to communicate about and share Real-Estate">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://remigo-landing-page.herokuapp.com/">
+<meta property="twitter:title" content="Remigo">
+<meta property="twitter:description" content="Reimaging the way Agents, Buyers, and Sellers to communicate about and share Real-Estate">
+<meta property="twitter:image" content="">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/IconLogo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
