--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,14 @@
     <meta property="og:url" content="https://remigo-landing-page.herokuapp.com/">
     <meta property="og:title" content="Remigo">
     <meta property="og:description" content="Reimaging the way Agents, Buyers, and Sellers to communicate about and share Real-Estate">
-    <meta property="og:image" content="" href="%PUBLIC_URL%/FacebookMeta.png">
+    <meta property="og:image" content="%PUBLIC_URL%/FacebookMeta.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://remigo-landing-page.herokuapp.com/">
     <meta property="twitter:title" content="Remigo">
     <meta property="twitter:description" content="Reimaging the way Agents, Buyers, and Sellers to communicate about and share Real-Estate">
-    <meta property="twitter:image" content="" href="%PUBLIC_URL%/TwitterMeta.png">
+    <meta property="twitter:image" content="%PUBLIC_URL%/TwitterMeta.png">
   </head>
 
   <body>
